# event_collector

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_en.md  README_zh.md  bench_cdf.py  bench_client.py  bench_client_reuse.py  docker-compose.yml  event_pb2.py  perf_report.md  plot_cdf.py  run_cdf_tests.sh  start.bat  start.sh  test_client.py  test_integration.sh  性能测试报告.md
.github/workflows/: ci.yml
alerts/: README.md  dead_letter.yml
docs/: PERFORMANCE_REPORT.md
include/: collector.h  event.pb.h  metrics.h  monitor.h  processor.h  queue.h  rate_limiter.h  storage.h  validation.h
init/: clickhouse-schema.sql
proto/: event.proto
src/: main.cpp
src/collector/: CMakeLists.txt  collector.cpp
src/monitor/: CMakeLists.txt  monitor.cpp
src/processor/: CMakeLists.txt  processor.cpp  rate_limiter.cpp  storage.cpp  validation.cpp
src/proto/: event.pb.cc
tests/: CMakeLists.txt  PERFORMANCE_REPORT.md  test_integration.py  test_metrics.cpp  test_queue.cpp  test_validate.cpp
